--- a/prusalink.yaml
+++ b/prusalink.yaml
@@ -16,6 +16,10 @@ package:
       - eudev
       - eudev-libs
       - yaml
+  target-architecture:
+    - x86_64
+    - aarch64
+    - armhf
   checks:
     disabled:
       - usrmerge
