--- a/otbr.yaml
+++ b/otbr.yaml
@@ -1,7 +1,7 @@
 package:
   name: otbr
   version: 0.3.0
-  epoch: 4
+  epoch: 6
   description: "OpenThread Border Router"
   copyright:
     - license: BSD-3-Clause
@@ -28,6 +28,14 @@ package:
       adduser otbr dialout 2>/dev/null || true
     post-install: |
       #!/bin/sh
+      # Configure Avahi to work with Thread's point-to-point interface (wpan0)
+      if [ -f /etc/avahi/avahi-daemon.conf ]; then
+        sed -i 's/^#*allow-point-to-point=.*/allow-point-to-point=yes/' /etc/avahi/avahi-daemon.conf
+        # Restart avahi if running to apply changes
+        if rc-service avahi-daemon status >/dev/null 2>&1; then
+          rc-service avahi-daemon restart >/dev/null 2>&1 || true
+        fi
+      fi
       echo ""
       echo "=== OTBR installed ==="
       echo ""
@@ -93,7 +101,9 @@ pipeline:
         -DOTBR_REST=ON \
         -DOTBR_WEB=OFF \
         -DOTBR_NAT64=ON \
-        -DOTBR_BORDER_ROUTING=ON
+        -DOTBR_BORDER_ROUTING=ON \
+        -DOTBR_SRP_ADVERTISING_PROXY=ON \
+        -DOTBR_DNSSD_DISCOVERY_PROXY=ON
       cmake --build build
 
   - runs: |
