--- a/matter-server.yaml
+++ b/matter-server.yaml
@@ -1,7 +1,7 @@
 package:
   name: matter-server
   version: 8.1.2
-  epoch: 10
+  epoch: 11
   description: "Open Home Foundation Matter Server - WebSocket-based Matter controller"
   copyright:
     - license: Apache-2.0
@@ -113,6 +113,9 @@ pipeline:
 
       printf '%s\n' '#!/usr/bin/python3' 'import sys' 'from matter_server.server.__main__ import main' 'sys.exit(main())' > "${{targets.destdir}}"/usr/bin/matter-server
       chmod 755 "${{targets.destdir}}"/usr/bin/matter-server
+
+      # Install CLI tool for commissioning
+      install -Dm755 matter-server/matter-commission "${{targets.destdir}}"/usr/bin/matter-commission
 
       # Install OpenRC init script (from package source dir)
       install -Dm755 matter-server/matter-server.initd "${{targets.destdir}}"/etc/init.d/matter-server
