--- a/universal-silabs-flasher.yaml
+++ b/universal-silabs-flasher.yaml
@@ -1,7 +1,7 @@
 package:
   name: universal-silabs-flasher
   version: 0.1.3
-  epoch: 1
+  epoch: 2
   description: "Flash Silicon Labs radios running EmberZNet, CPC, or Gecko Bootloader firmware"
   copyright:
     - license: GPL-3.0-only
@@ -74,7 +74,7 @@ pipeline:
             continue
             ;;
           # Skip transitive dependencies also provided by Alpine
-          attrs-*|yarl-*|multidict-*|frozenlist-*|charset_normalizer-*|cffi-*|pycparser-*|idna-*|aiohappyeyeballs-*|propcache-*|humanfriendly-*)
+          aiosignal-*|attrs-*|yarl-*|multidict-*|frozenlist-*|charset_normalizer-*|cffi-*|pycparser-*|idna-*|aiohappyeyeballs-*|propcache-*|humanfriendly-*)
             echo "Skipping $whl (provided by Alpine)"
             continue
             ;;
