--- a/matter-server.yaml
+++ b/matter-server.yaml
@@ -1,7 +1,7 @@
 package:
   name: matter-server
   version: 8.1.2
-  epoch: 13
+  epoch: 14
   description: "Open Home Foundation Matter Server - WebSocket-based Matter controller"
   copyright:
     - license: Apache-2.0
@@ -140,8 +140,9 @@ pipeline:
       printf '%s\n' '#!/usr/bin/python3' 'import sys' 'from matter_server.server.__main__ import main' 'sys.exit(main())' > "${{targets.destdir}}"/usr/bin/matter-server
       chmod 755 "${{targets.destdir}}"/usr/bin/matter-server
 
-      # Install CLI tool for commissioning
+      # Install CLI tools
       install -Dm755 matter-server/matter-commission "${{targets.destdir}}"/usr/bin/matter-commission
+      install -Dm755 matter-server/matter-thread-sync "${{targets.destdir}}"/usr/bin/matter-thread-sync
 
       # Install OpenRC init script (from package source dir)
       install -Dm755 matter-server/matter-server.initd "${{targets.destdir}}"/etc/init.d/matter-server
