Fix occu-hmserver startup issues
- occu (epoch 6):
  - Reorder init script checks: check for HMIPServer.jar before Java
  - Improve error message to suggest installing occu-java package
  - Fix occu-detect-rf to resolve symlinks (Java serial library compatibility)

- occu-java (epoch 4):
  - Change dependency from openjdk11-jre-headless to java-jre-headless
    (virtual package, allows any JRE version)

--- a/occu-java.yaml
+++ b/occu-java.yaml
@@ -1,14 +1,14 @@
 package:
   name: occu-java
   version: 3.85.7
-  epoch: 3
+  epoch: 4
   description: "eQ-3 OCCU - HomeMatic IP Server (Java)"
   copyright:
     - license: HMSL
       license-path: occu-src/LicenseDE.txt
   dependencies:
     runtime:
-      - openjdk11-jre-headless
+      - java-jre-headless
       - occu
       - gcompat-custom
   target-architecture:
