--- a/occu-webui.yaml
+++ b/occu-webui.yaml
@@ -1,7 +1,7 @@
 package:
   name: occu-webui
   version: 3.85.7
-  epoch: 2
+  epoch: 3
   description: "eQ-3 OCCU - HomeMatic WebUI"
   copyright:
     - license: HMSL
@@ -10,12 +10,44 @@ package:
     runtime:
       - lighttpd
       - occu
+      - tclrega
+      - tcl
   target-architecture:
     - aarch64
     - x86_64
   checks:
     disabled:
       - usrmerge
+  scriptlets:
+    post-install: |
+      #!/bin/sh
+      # Create required directories
+      mkdir -p /etc/occu/config
+      mkdir -p /www/rega
+
+      # Copy templates to config if not exists
+      if [ ! -f /etc/occu/config/rega.conf ]; then
+        cp /etc/occu/config_templates/rega.conf /etc/occu/config/rega.conf
+      fi
+      if [ ! -f /etc/occu/config/InterfacesList.xml ]; then
+        cp /etc/occu/config_templates/InterfacesList.xml /etc/occu/config/InterfacesList.xml
+      fi
+
+      echo ""
+      echo "=== OCCU WebUI installed ==="
+      echo ""
+      echo "To start ReGaHss:"
+      echo "  rc-service occu-regahss start"
+      echo "  rc-update add occu-regahss default"
+      echo ""
+      echo "Ports:"
+      echo "  8183  ReGaHss HTTP (internal)"
+      echo "  31999 ReGaHss XML-RPC"
+      echo ""
+      echo "Config files:"
+      echo "  /etc/occu/rega.conf"
+      echo "  /etc/occu/config/InterfacesList.xml"
+      echo ""
 
 environment:
   contents:
@@ -107,6 +139,20 @@ pipeline:
       # Ensure addons directory exists (symlink target created at runtime)
       mkdir -p "$DESTDIR/www/addons" || true
 
+  # Install configuration templates
+  - runs: |
+      DESTDIR="${{targets.destdir}}"
+
+      # Install rega.conf template
+      install -Dm644 occu-webui/rega.conf "$DESTDIR/etc/occu/rega.conf"
+      install -Dm644 occu-webui/rega.conf "$DESTDIR/etc/occu/config_templates/rega.conf"
+
+      # Install InterfacesList.xml template
+      install -Dm644 occu-webui/InterfacesList.xml "$DESTDIR/etc/occu/config_templates/InterfacesList.xml"
+
+      # Create www/rega directory for ReGaHss HTTP document root
+      mkdir -p "$DESTDIR/www/rega"
+
 test:
   environment:
     contents:
@@ -120,3 +166,11 @@ test:
         # Test that WebUI files exist
         test -d /www
         test -f /etc/lighttpd/occu.conf
+
+        # Test that config templates exist
+        test -f /etc/occu/rega.conf
+        test -f /etc/occu/config_templates/rega.conf
+        test -f /etc/occu/config_templates/InterfacesList.xml
+
+        # Test that www/rega directory exists
+        test -d /www/rega
