--- a/openccu-webui/rega.conf
+++ b/openccu-webui/rega.conf
@@ -19,7 +19,7 @@ XmlRpcFileName=/etc/occu/config/InterfacesList.xml
 # HTTP Settings
 #*******************************************************************************
 
-HttpDocPath=/www/rega
+HttpDocPath=/www
 HttpListenerPort=8183
 HttpListenerMaxConnections=24
 VirtualPathInternalConfig=/config/
