--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,11 +4,11 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 authors = [
-    { name = "Enno Richter", email = "enno@nerdworks.de" }
+  { name = "Enno Richter", email = "enno@nerdworks.de" },
 ]
 requires-python = ">=3.13"
 dependencies = [
-    "pyyaml>=6.0.3",
+  "pyyaml>=6.0.3",
 ]
 
 [project.scripts]
