--- a/microvm-init.yaml
+++ b/microvm-init.yaml
@@ -1,7 +1,7 @@
 package:
   name: microvm-init
   version: 0.0.1
-  epoch: 106
+  epoch: 108
   description: Minimal busybox init for microvm workloads (Alpine port)
   copyright:
     - license: Apache-2.0
@@ -76,11 +76,11 @@ pipeline:
       AllowAgentForwarding no
       StrictModes yes
       X11Forwarding no
-      AllowTcpForwarding no
+      AllowTcpForwarding yes
       GatewayPorts no
       PermitTunnel no
-      PermitOpen none
-      DisableForwarding yes
+      PermitOpen any
+      DisableForwarding no
       AllowStreamLocalForwarding no
       HostKeyAlgorithms ssh-ed25519
       Ciphers aes128-gcm@openssh.com
