--- a/microvm-init.yaml
+++ b/microvm-init.yaml
@@ -1,7 +1,7 @@
 package:
   name: microvm-init
   version: 0.0.1
-  epoch: 108
+  epoch: 109
   description: Minimal busybox init for microvm workloads (Alpine port)
   copyright:
     - license: Apache-2.0
@@ -40,6 +40,7 @@ pipeline:
           ${{targets.destdir}}/dev \
           ${{targets.destdir}}/home \
           ${{targets.destdir}}/home/build/ \
+          ${{targets.destdir}}/lib/modules \
           ${{targets.destdir}}/mnt \
           ${{targets.destdir}}/mount \
           ${{targets.destdir}}/mount/sys \
